--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,6 +18,11 @@
   src: url('../fonts/ProximaNova-Bold.woff') format('woff');
 }
 
+//TODO check this ok
+* {
+    box-sizing: border-box;
+  }
+
 html {
   font-size: 15px;
 }
@@ -72,6 +77,7 @@ h6 {
   padding: 0.5em 0.5em;
   border-radius: 4px;
   box-sizing: border-box;
+  margin-bottom: $page-padding;
 }
 .button-1:hover {
   background-color: #ff0f43;
